# Pollbot

./: .gitignore  CMakeLists.txt  README.md  llama3_survey  main.cpp
js/: find_title.js  find_title_full.js  get_form_tree.js  get_form_tree_full.js  util.js
llama/: llama.cpp  llama.h
marionette/: BaseMarionetteClient.cpp  BaseMarionetteClient.h  Firefox.cpp  Firefox.h  MarionetteClient.cpp  MarionetteClient.h
pollbot/: PollPay.cpp  PollPay.h  Provider.cpp  Provider.h  StaticResponse.cpp  StaticResponse.h
pollbot/parser/: FormParser.cpp  FormParser.h
translate/: Translate.cpp  Translate.h
ui/: BotInstance.cpp  BotInstance.h  Console.cpp  Console.h
ui/command/: ConsoleCommand.cpp  ConsoleCommand.h
util/: Logger.cpp  Logger.h  boilerplate.cpp  boilerplate.h  json.hpp  util.cpp  util.h
